--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "react-dnd": "^14.0.5",
-    "react-dnd-html5-backend": "^14.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.0",
