--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
