--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.2",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.2.2",
