--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,6 @@ stages:
         containerRegistry: 'Docker hub'
         repository: 'jorisk63/plonks'
         command: 'buildAndPush'
-        dockerfile: '$(Build.SourcesDirectory)/Plonks.Auth/Dockerfile'
-        buildContext: '$(Build.SourcesDirectory)'
+        dockerfile: '**/Dockerfile'
         tags: |
           Plonks-$(tag)
